--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 22px;
-    font-family:
+    font-family: Arial, Helvetica, sans-serif;
   }
 
 
@@ -76,6 +76,6 @@ ul,li{
     background-color: red;
     position: absolute;
     left: 9px;
-    top: 7px;
+    top: 6px;
 
 }
